--- a/discordjennapinkgaegutheme.theme.css
+++ b/discordjennapinkgaegutheme.theme.css
@@ -20,7 +20,7 @@
   --danger-color: #DF5757;
   --url-color: #C5A8B7;
   --undefined: 0;
-  --background-image: url('https://static.vecteezy.com/system/resources/previews/002/207/677/original/cherry-blossom-background-free-vector.jpg');
+  --background-image: url('https://raw.githubusercontent.com/EricTuason/Discord_theme/master/cherry-blossom-background-free-vector.jpg');
   --background-shading: 26%;
   --background-position: center;
   --background-size: cover;
