--- a/ClearVision-v7-BetterDiscord.theme.css
+++ b/ClearVision-v7-BetterDiscord.theme.css
@@ -25,7 +25,7 @@
   --offline-color: #808080;
   /* APP BACKGROUND */
   --background-shading-percent: 100%;
-  --background-image: url(https://clearvision.github.io/images/sapphire.jpg);
+  --background-image: url(https://raw.githubusercontent.com/EricTuason/Discord_theme/master/8797045.jpg);
   --background-attachment: fixed;
   --background-filter: saturate(calc(var(--saturation-factor, 1) * 1));
   /* USER POPOUT BACKGROUND */
